cmake_minimum_required(VERSION 3.23)
project(lab11_exercises)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab11_exercises main.cpp Buffer.cpp Buffer.h BufferArr.cpp BufferArr.h BufferFile.cpp BufferFile.h Warehouse.cpp Warehouse.h Shop.cpp Shop.h Node.cpp Node.h ListaDwukierunkowa.cpp ListaDwukierunkowa.h)
